--- a/minihospital/patient/templates/profile-edit.html
+++ b/minihospital/patient/templates/profile-edit.html
@@ -131,7 +131,7 @@
                 </div>
                 <div>
                     <label class="block name" for="gender">เพศ</label>
-                    {{ form.gender }}
+                    {{ patient.gender }}
                 </div>
                 <div>
                     <label class="block name" for="dob">วันเกิด</label>
