--- a/minihospital/appoint/templates/doc_appointment_edit.html
+++ b/minihospital/appoint/templates/doc_appointment_edit.html
@@ -72,7 +72,7 @@
                 
                 <div class="flex justify-between items-center">
                     
-                    <img width="50" height="50" src="{% static 'image\left-arrow (2).png' %}">
+                    <img width="50" height="50" src="{% static 'image\left-arrow (2).png' %}" class="hidden">
                     
                     <div id="dateGrid" class="grid grid-cols-7 grid-cols-1 gap-[26px] m-16">
                         {% for i in week %}
@@ -83,7 +83,7 @@
                         {% endfor %}
                     </div>
                     
-                    <img width="50" height="50" src="{% static 'image\left-arrow (2).png' %}" class="rotate-180">
+                    <img width="50" height="50" src="{% static 'image\left-arrow (2).png' %}" class="hidden rotate-180">
                     
                 </div>
                 
