--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -13,10 +13,8 @@
 
     {% block nav %}
     <nav class="z-[100] nav-bg bg-transparent bg-white fixed w-full shadow-md">
-            <div class="mx-5 px-6 py-3 flex justify-between items-center ">
-                <div class="nav-text text-white text-[#494949]">
-                    logo
-                </div>
+            <div class="mx-5 px-6 py-1 flex justify-between items-center ">
+                <img src="{% static 'image/logo.png' %}" width="70" height="70" class="p-3">
                 <div class="flex space-x-9">
                     {% if user.doctor %}
                         <div class="flex items-center space-x-9">
