--- a/minihospital/treat/templates/appointment_edit.html
+++ b/minihospital/treat/templates/appointment_edit.html
@@ -191,7 +191,7 @@
                     </div>
                     <div>
                         <a href="#" class="text-xl p-3 px-12 font-medium hover:bg-[#15CDCB] duration-300 hover:scale-110 transition ease-in-out delay-150 bg-transparent border border-[#15CDCB] flex justify-center rounded-full items-center]">
-                            ยกเลิกนัดหมาย
+                            แก้ไขนัดหมาย
                          </a>
                     </div>
                 </div>
