--- a/minihospital/appoint/templates/appointment.html
+++ b/minihospital/appoint/templates/appointment.html
@@ -214,7 +214,7 @@
                     <div class="text-[#494949] text-lg font-normal">มีอาการตั้งแต่  : </div>
                     <div class="w-[350px] flex items-center relative">   
                         {{ form.start_sympdate }}
-                        <img src="{% static 'image/greycalendar.png' %}" onclick="openDatePicker('sympDate')"  class="cursor-pointer absolute right-6" width="27" height="27">
+                        <img src="{% static 'image/greycalendar.png' %}" onclick="openDatePicker('sympdate')"  class="cursor-pointer absolute right-6" width="27" height="27">
                     </div>
         
                     <div class="text-[#494949] text-lg font-normal">อุณภูมิร่างกาย : </div>
